--- a/libs/components/src/lib/components/header/components/prizm-header-dropdown/prizm-header-dropdown.component.html
+++ b/libs/components/src/lib/components/header/components/prizm-header-dropdown/prizm-header-dropdown.component.html
@@ -12,13 +12,18 @@
     (click)="openDropdown = !openDropdown"
   >
     <div class="screen">
-      <prizm-icon
+      <!--      <prizm-icon-->
+      <!--        class="screen__icon"-->
+      <!--        [iconClass]="data[currentScreenIdx]?.icon || 'files-folder'"-->
+      <!--      ></prizm-icon>-->
+      <prizm-icons-full
         class="screen__icon"
-        [iconClass]="data[currentScreenIdx]?.icon || 'files-folder'"
-      ></prizm-icon>
+        [name]="data[currentScreenIdx]?.icon || iconFilesFolder.name"
+      ></prizm-icons-full>
       <span class="screen__title">{{ data[currentScreenIdx]?.title }}</span>
     </div>
-    <prizm-icon class="dropdown__icon" iconClass="chevrons-menu-right"></prizm-icon>
+    <!--    <prizm-icon class="dropdown__icon" iconClass="chevrons-menu-right"></prizm-icon>-->
+    <prizm-icons-full class="dropdown__icon" [name]="iconAngleRight.name"></prizm-icons-full>
   </button>
 </prizm-dropdown-host>
 
@@ -31,7 +36,8 @@
       (click)="changeScreen(i)"
     >
       <div class="screen">
-        <prizm-icon class="screen__icon" [iconClass]="item?.icon || 'files-folder'"></prizm-icon>
+        <!--        <prizm-icon class="screen__icon" [iconClass]="item?.icon || 'files-folder'"></prizm-icon>-->
+        <prizm-icons-full class="screen__icon" [name]="item?.icon || iconFilesFolder.name"></prizm-icons-full>
         <span class="screen__title">{{ item?.title }}</span>
       </div>
     </div>
