feat(components/input-icon-button): replaced icon component (bc)

--- a/libs/components/src/lib/components/input/common/input-icon-button/input-icon-button.component.html
+++ b/libs/components/src/lib/components/input/common/input-icon-button/input-icon-button.component.html
@@ -1,1 +1,2 @@
-<prizm-icon [iconClass]="prizmInputIconButton" [size]="size"></prizm-icon>
+<!--<prizm-icon [iconClass]="prizmInputIconButton" [size]="size"></prizm-icon>-->
+<prizm-icons-full [name]="prizmInputIconButton" [size]="size"></prizm-icons-full>
