fix: fix styles for input chips

--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -118,7 +118,9 @@
     display: flex;
     align-items: center;
     flex-grow: 1;
+  }
 
+  &:not(:has([prizm-input-bottom])) &__first {
     // Hack for height in percents for buttons inside controls
     height: 1px;
   }
