--- a/apps/doc/src/app/components/dropdowns/dropdown-host/examples/date-list-with-nested/date-list.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/examples/date-list-with-nested/date-list.component.html
@@ -10,7 +10,8 @@
 <ng-template #dropdown>
   <prizm-data-list [style.--prizm-data-list-border]="0">
     <div class="header" header>
-      <prizm-icon iconClass="date-calendar-range"></prizm-icon>
+      <!--      <prizm-icon iconClass="date-calendar-range"></prizm-icon>-->
+      <prizm-icons-full name="calendar-range"></prizm-icons-full>
       <span class="title">Выбор периода</span>
     </div>
     <div class="box">
