fix: input chips styles fix

--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -209,21 +209,21 @@
   &-inner {
     min-height: 44px;
 
-    &:not(:has(prizm-chips)) {
+    &:not(:has(prizm-chips > .chips-list)) {
       max-height: 44px;
     }
 
     &[data-size='l'] {
       min-height: 44px;
 
-      &:not(:has(prizm-chips)) {
+      &:not(:has(prizm-chips > .chips-list)) {
         max-height: 44px;
       }
     }
     &[data-size='m'] {
       min-height: 36px;
 
-      &:not(:has(prizm-chips)) {
+      &:not(:has(prizm-chips > .chips-list)) {
         max-height: 36px;
       }
     }
@@ -235,28 +235,28 @@
   &-outer {
     min-height: 32px;
 
-    &:not(:has(prizm-chips)) {
+    &:not(:has(prizm-chips > .chips-list)) {
       max-height: 32px;
     }
 
     &[data-size='l'] {
       min-height: 40px;
 
-      &:not(:has(prizm-chips)) {
+      &:not(:has(prizm-chips > .chips-list)) {
         max-height: 40px;
       }
     }
     &[data-size='m'] {
       min-height: 32px;
 
-      &:not(:has(prizm-chips)) {
+      &:not(:has(prizm-chips > .chips-list)) {
         max-height: 32px;
       }
     }
     &[data-size='s'] {
       min-height: 24px;
 
-      &:not(:has(prizm-chips)) {
+      &:not(:has(prizm-chips > .chips-list)) {
         max-height: 24px;
       }
     }
