--- a/libs/components/src/lib/components/indicator/indicator.component.html
+++ b/libs/components/src/lib/components/indicator/indicator.component.html
@@ -4,7 +4,7 @@
   [attr.status]="status"
   [attr.type]="type"
 >
-  <span class="indicator__icon prizm-icon">
+  <span class="indicator__icon">
     <prizm-icons *ngIf="type === 'icon'" [size]="14" [name]="iconMap?.[status] ?? ''"> </prizm-icons>
   </span>
   <!--  <span class="indicator__icon prizm-icon {{iconMap?.[status]}}" *ngIf="type === 'icon'"></span>-->
