feat: remove old icons set

--- a/apps/doc/src/app/components/icons/base/old/old-icon.component.html
+++ b/apps/doc/src/app/components/icons/base/old/old-icon.component.html
@@ -1,25 +1,25 @@
-<h1>Иконки</h1>
+<!--<h1>Иконки</h1>-->
 
-<div>
-  <h4 class="title">Иконки - {{ existIcons.length }}</h4>
-  <div class="icons">
-    <div class="icon-def" *ngFor="let obj of existIcons" (click)="copy(obj.new)">
-      <prizm-icons [size]="24" [name]="obj.old"></prizm-icons>
-      <div class="name">{{ obj.old }}</div>
-    </div>
-  </div>
-</div>
+<!--<div>-->
+<!--  <h4 class="title">Иконки - {{ existIcons.length }}</h4>-->
+<!--  <div class="icons">-->
+<!--    <div class="icon-def" *ngFor="let obj of existIcons" (click)="copy(obj.new)">-->
+<!--      <prizm-icons [size]="24" [name]="obj.old"></prizm-icons>-->
+<!--      <div class="name">{{ obj.old }}</div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
-<div>
-  <h4 class="title">Удаленные иконки - {{ removedIcons.length }}</h4>
-  <div class="icons">
-    <div class="icon-def" *ngFor="let obj of removedIcons">
-      <prizm-icons [size]="24" [name]="'none'"></prizm-icons>
-      <div class="name">{{ obj.old }}</div>
-    </div>
-  </div>
-</div>
+<!--<div>-->
+<!--  <h4 class="title">Удаленные иконки - {{ removedIcons.length }}</h4>-->
+<!--  <div class="icons">-->
+<!--    <div class="icon-def" *ngFor="let obj of removedIcons">-->
+<!--      <prizm-icons [size]="24" [name]="'none'"></prizm-icons>-->
+<!--      <div class="name">{{ obj.old }}</div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
-<ng-template #noIconTemplate>
-  <div>NO ICON</div>
-</ng-template>
+<!--<ng-template #noIconTemplate>-->
+<!--  <div>NO ICON</div>-->
+<!--</ng-template>-->
