--- a/apps/doc/src/app/components/input/input-multi-select/examples/with-template/multi-select-with-template-example.component.html
+++ b/apps/doc/src/app/components/input/input-multi-select/examples/with-template/multi-select-with-template-example.component.html
@@ -5,7 +5,8 @@
 
 <ng-template #valueTemplate let-value>
   <div class="item">
-    <prizm-icon iconClass="account-done"></prizm-icon>
+    <!--    <prizm-icon iconClass="account-done"></prizm-icon>-->
+    <prizm-icons-full name="account-done"></prizm-icons-full>
     <span>{{ value.stringify }}</span>
   </div>
 </ng-template>
