--- a/apps/doc/src/app/components/input/input-select/examples/async/select-async-example.component.html
+++ b/apps/doc/src/app/components/input/input-select/examples/async/select-async-example.component.html
@@ -24,7 +24,8 @@
 
 <ng-template #valueTemplate let-value let-stringify="stringify">
   <div class="item">
-    <prizm-icon iconClass="account-done"></prizm-icon>
+    <!--    <prizm-icon iconClass="account-done"></prizm-icon>-->
+    <prizm-icons-full name="account-done"></prizm-icons-full>
     <span>{{ stringify }}</span>
   </div>
 </ng-template>
