--- a/apps/doc/src/app/components/input/input-text/examples/input-custom-clear-button-example/input-custom-clear-button-example.component.html
+++ b/apps/doc/src/app/components/input/input-text/examples/input-custom-clear-button-example/input-custom-clear-button-example.component.html
@@ -53,7 +53,7 @@
 <div>
   <h2>Custom Icon</h2>
 
-  <prizm-input-layout [clearButton]="'cancel-close'" label="Заголовок">
+  <prizm-input-layout [clearButton]="'xmark'" label="Заголовок">
     <input prizmInput />
   </prizm-input-layout>
 </div>
