--- a/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-hard/panel-example-with-instruments-hard.component.html
+++ b/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-hard/panel-example-with-instruments-hard.component.html
@@ -24,7 +24,7 @@
           size="s"
           appearanceType="ghost"
           appearance="secondary"
-          icon="editor-mode"
+          icon="filter"
         ></button>
         <button
           class="instruments__icon"
@@ -40,7 +40,7 @@
           size="s"
           appearanceType="ghost"
           appearance="secondary"
-          icon="delete"
+          icon="trash-empty"
         ></button>
       </div>
 
@@ -59,7 +59,7 @@
           size="s"
           appearanceType="ghost"
           appearance="secondary"
-          icon="arrows-expand-all"
+          icon="arrows-maximize"
         ></button>
         <button
           class="instruments__icon"
