--- a/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-simple/panel-example-with-instruments-simple.component.html
+++ b/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-simple/panel-example-with-instruments-simple.component.html
@@ -20,7 +20,7 @@
           size="s"
           appearanceType="ghost"
           appearance="secondary"
-          icon="editor-mode"
+          icon="filter"
         ></button>
         <button
           class="instruments__icon"
@@ -36,7 +36,7 @@
           size="s"
           appearanceType="ghost"
           appearance="secondary"
-          icon="delete"
+          icon="trash-empty"
         ></button>
       </div>
 
@@ -55,7 +55,7 @@
           size="s"
           appearanceType="ghost"
           appearance="secondary"
-          icon="arrows-expand-all"
+          icon="arrows-maximize"
         ></button>
         <button
           class="instruments__icon"
