--- a/apps/doc/src/app/components/zoom-control/examples/zoom-control-example-basic/zoom-control-example-basic.component.html
+++ b/apps/doc/src/app/components/zoom-control/examples/zoom-control-example-basic/zoom-control-example-basic.component.html
@@ -7,14 +7,15 @@
         (click)="scaleDecrease()"
         prizmIconButton
         appearanceType="ghost"
-        icon="sort-zoom-out"
+        icon="magnifying-glass-minus"
         appearance="secondary"
         size="m"
       ></button>
       <prizm-dropdown-host [(isOpen)]="openDropdown" [content]="dropdown" prizmDropdownHostWidth="100%">
         <button class="zoom-control__select" (click)="openDropdown = !openDropdown">
           {{ currentScale | number : '.0-1' }}%
-          <prizm-icon class="zoom-control__select-icon" iconClass="chevrons-dropdown"></prizm-icon>
+          <!--          <prizm-icon class="zoom-control__select-icon" iconClass="chevrons-dropdown"></prizm-icon>-->
+          <prizm-icons-full class="zoom-control__select-icon" name="triangle-down"></prizm-icons-full>
         </button>
       </prizm-dropdown-host>
       <button
@@ -23,7 +24,7 @@
         (click)="scaleIncrease()"
         prizmIconButton
         appearanceType="ghost"
-        icon="sort-maximize"
+        icon="magnifying-glass-plus"
         appearance="secondary"
         size="m"
       ></button>
@@ -51,7 +52,8 @@
     <div class="settings-group">
       <prizm-listing-item (click)="scaleDecrease()">
         <ng-container leftBox>
-          <prizm-icon class="icon" iconClass="sort-zoom-out"></prizm-icon>
+          <!--          <prizm-icon class="icon" iconClass="sort-zoom-out"></prizm-icon>-->
+          <prizm-icons-full class="icon" name="magnifying-glass-minus"></prizm-icons-full>
         </ng-container>
         Уменьшить
         <ng-container rightBox>
@@ -61,7 +63,8 @@
 
       <prizm-listing-item (click)="scaleIncrease()">
         <ng-container leftBox>
-          <prizm-icon class="icon" iconClass="sort-maximize"></prizm-icon>
+          <!--          <prizm-icon class="icon" iconClass="sort-maximize"></prizm-icon>-->
+          <prizm-icons-full class="icon" name="magnifying-glass-plus"></prizm-icons-full>
         </ng-container>
         Увеличить
         <ng-container rightBox>
@@ -73,7 +76,8 @@
     <div class="settings-group">
       <prizm-listing-item (click)="setScale(100)">
         <ng-container leftBox>
-          <prizm-icon class="icon" iconClass="arrows-expand-all"></prizm-icon>
+          <!--          <prizm-icon class="icon" iconClass="arrows-expand-all"></prizm-icon>-->
+          <prizm-icons-full class="icon" name="arrows-maximize"></prizm-icons-full>
         </ng-container>
         Полный размер
         <ng-container rightBox>
@@ -83,7 +87,8 @@
 
       <prizm-listing-item (click)="setScale(100)">
         <ng-container leftBox>
-          <prizm-icon class="icon" iconClass="editor-border-outer"></prizm-icon>
+          <!--          <prizm-icon class="icon" iconClass="editor-border-outer"></prizm-icon>-->
+          <prizm-icons-full class="icon" name="border-outer"></prizm-icons-full>
         </ng-container>
         Вписать
         <ng-container rightBox>
@@ -95,7 +100,8 @@
     <div class="settings-group">
       <prizm-listing-item (click)="setScale((400 / 250) * 100)">
         <ng-container leftBox>
-          <prizm-icon class="icon" iconClass="arrows-arrow-expand-vertical"></prizm-icon>
+          <!--          <prizm-icon class="icon" iconClass="arrows-arrow-expand-vertical"></prizm-icon>-->
+          <prizm-icons-full class="icon" name="arrows-up-down-to-lines"></prizm-icons-full>
         </ng-container>
         По высоте
         <ng-container rightBox>
@@ -105,7 +111,8 @@
 
       <prizm-listing-item (click)="setScale((contentWidth / 250) * 100)">
         <ng-container leftBox>
-          <prizm-icon class="icon" iconClass="arrows-arrow-expand-horizontal"></prizm-icon>
+          <!--          <prizm-icon class="icon" iconClass="arrows-arrow-expand-horizontal"></prizm-icon>-->
+          <prizm-icons-full class="icon" name="arrows-left-right-to-lines"></prizm-icons-full>
         </ng-container>
         По ширине
         <ng-container rightBox>
