--- a/libs/components/src/lib/components/dialogs/dialog/dialog.component.html
+++ b/libs/components/src/lib/components/dialogs/dialog/dialog.component.html
@@ -11,7 +11,7 @@
         appearanceType="ghost"
         appearance="secondary"
         prizmIconButton
-        icon="cancel-close"
+        icon="xmark"
       ></button>
     </div>
   </ng-container>
