--- a/libs/components/src/lib/components/dialogs/sidebar/sidebar.component.html
+++ b/libs/components/src/lib/components/dialogs/sidebar/sidebar.component.html
@@ -21,7 +21,7 @@
       <button
         *ngIf="context.closeable"
         [size]="'m'"
-        [icon]="'cancel-close'"
+        [icon]="'xmark'"
         (click)="closeSidebar()"
         appearanceType="ghost"
         appearance="secondary"
