--- a/libs/components/src/lib/components/file-upload/file-upload.component.html
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.html
@@ -72,7 +72,7 @@
       <button
         class="file__delete-btn"
         [disabled]="disabled"
-        [icon]="'delete'"
+        [icon]="'trash-empty'"
         (click)="removeFile(item.key)"
         prizmIconButton
         appearanceType="ghost"
