--- a/libs/components/src/lib/components/input/input-date-range/input-layout-date-range.component.html
+++ b/libs/components/src/lib/components/input/input-date-range/input-layout-date-range.component.html
@@ -87,6 +87,6 @@
     [interactive]="true"
     [disabled]="disabled"
     (click)="focusableElementRef.focus(); onOpenChange(!open)"
-    prizmInputIconButton="date-calendar-range"
+    prizmInputIconButton="calendar-range"
   ></button>
 </ng-container>
