--- a/libs/components/src/lib/components/input/input-date-relative/input-layout-date-relative.component.html
+++ b/libs/components/src/lib/components/input/input-date-relative/input-layout-date-relative.component.html
@@ -50,7 +50,7 @@
     [interactive]="true"
     [disabled]="disabled"
     (click)="focusableElementRef.elementRef.nativeElement.click()"
-    prizmInputIconButton="date-update"
+    prizmInputIconButton="clock-rotate-right"
   ></button>
   <ng-container *ngFor="let button of rightButtons$ | async" [ngTemplateOutlet]="button.template">
   </ng-container>
