--- a/libs/components/src/lib/components/input/input-date-time/input-layout-date-time.component.html
+++ b/libs/components/src/lib/components/input/input-date-time/input-layout-date-time.component.html
@@ -72,13 +72,13 @@
     [interactive]="true"
     [disabled]="disabled"
     (click)="openDateDropdown(!open)"
-    prizmInputIconButton="date-calendar-blank"
+    prizmInputIconButton="calendar-blank"
   ></button>
   <button
     [disabled]="disabled"
     [interactive]="true"
     (click)="openTimeDropdown(!openTimeTemplate)"
-    prizmInputIconButton="date-clock"
+    prizmInputIconButton="clock"
   ></button>
   <ng-container *ngFor="let button of rightButtons$ | async" [ngTemplateOutlet]="button.template">
   </ng-container>
