--- a/libs/components/src/lib/components/input/input-month-range/input-layout-month-range.component.html
+++ b/libs/components/src/lib/components/input/input-month-range/input-layout-month-range.component.html
@@ -46,6 +46,6 @@
     [interactive]="true"
     [disabled]="disabled"
     (click)="onOpenChange(!open)"
-    prizmInputIconButton="date-calendar-range"
+    prizmInputIconButton="calendar-range"
   ></button>
 </ng-container>
