--- a/apps/doc/src/app/components/input/input-text/examples/input-icon-buttons-example/input-icon-buttons-example.component.html
+++ b/apps/doc/src/app/components/input/input-text/examples/input-icon-buttons-example/input-icon-buttons-example.component.html
@@ -53,7 +53,8 @@
 
 <prizm-input-layout label="Заголовок">
   <ng-container prizm-input-left>
-    <prizm-icon class="input-icon" [size]="16" iconClass="arrows-refresh"></prizm-icon>
+    <!--    <prizm-icon class="input-icon" [size]="16" iconClass="arrows-refresh"></prizm-icon>-->
+    <prizm-icons-full class="input-icon" [size]="16" name="arrows-refresh"></prizm-icons-full>
   </ng-container>
 
   <input prizmInput />
