--- a/apps/doc/src/app/components/side-menu/examples/side-menu-example-basic/side-menu-example-basic.component.html
+++ b/apps/doc/src/app/components/side-menu/examples/side-menu-example-basic/side-menu-example-basic.component.html
@@ -28,21 +28,37 @@
         <prizm-panel header="Side Menu">
           <div class="instruments" instruments>
             <div class="instruments__group">
-              <prizm-icon
+              <!--              <prizm-icon-->
+              <!--                class="instruments__icon"-->
+              <!--                [size]="16"-->
+              <!--                (click)="changeSideMenuType()"-->
+              <!--                iconClass="editor-down-1"-->
+              <!--              ></prizm-icon>-->
+              <prizm-icons-full
                 class="instruments__icon"
                 [size]="16"
                 (click)="changeSideMenuType()"
-                iconClass="editor-down-1"
-              ></prizm-icon>
+                name="editor-down"
+              ></prizm-icons-full>
             </div>
 
             <div class="instruments__group">
-              <prizm-icon
+              <!--              <prizm-icon-->
+              <!--                class="instruments__icon"-->
+              <!--                [size]="16"-->
+              <!--                iconClass="cancel-delete-content"-->
+              <!--              ></prizm-icon>-->
+              <prizm-icons-full
                 class="instruments__icon"
                 [size]="16"
-                iconClass="cancel-delete-content"
-              ></prizm-icon>
-              <prizm-icon class="instruments__icon" [size]="16" iconClass="tools-content-save"></prizm-icon>
+                name="cancel-delete-content"
+              ></prizm-icons-full>
+              <!--              <prizm-icon class="instruments__icon" [size]="16" iconClass="tools-content-save"></prizm-icon>-->
+              <prizm-icons-full
+                class="instruments__icon"
+                [size]="16"
+                name="tools-content-save"
+              ></prizm-icons-full>
             </div>
           </div>
         </prizm-panel>
