--- a/libs/components/src/lib/components/input/input-date-time-range/input-layout-date-time-range.component.html
+++ b/libs/components/src/lib/components/input/input-date-time-range/input-layout-date-time-range.component.html
@@ -171,7 +171,7 @@
     [style.--prizm-input-icon-button-width]="'24px'"
     [disabled]="!!disabled"
     (click)="focusableElementRef.focus(); onOpenChange(!open)"
-    prizmInputIconButton="date-calendar-range"
+    prizmInputIconButton="calendar-range"
   ></button>
   <!--  TODO add after create time-range modal -->
   <!--  <button-->
