--- a/libs/components/src/lib/components/toast/toast/toast.component.html
+++ b/libs/components/src/lib/components/toast/toast/toast.component.html
@@ -18,11 +18,6 @@
   </div>
 
   <div class="control">
-    <button
-      [size]="16"
-      [interactive]="true"
-      (click)="toastRef.close()"
-      prizmInputIconButton="cancel-close"
-    ></button>
+    <button [size]="16" [interactive]="true" (click)="toastRef.close()" prizmInputIconButton="xmark"></button>
   </div>
 </div>
