fix: fix styles for textarea

--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -120,7 +120,7 @@
     flex-grow: 1;
   }
 
-  &:not(:has([prizm-input-bottom])) &__first {
+  &:not(:has([prizm-input-bottom])):not(.prizm-input-form-textarea) &__first {
     // Hack for height in percents for buttons inside controls
     height: 1px;
   }
