fix: input buttons overflow fix

--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -6,7 +6,6 @@
   .prizm-input-form-status-button,
   .prizm-input-button-default {
     flex-shrink: 0;
-    height: 100%;
   }
 
   .prizm-input-button-default {
@@ -269,6 +268,7 @@
         position: absolute;
         z-index: 100;
         background-color: var(--prizm-form-fill-default);
+        height: auto;
       }
 
       .prizm-input-button-default {
