fix: status button for inputs style fix

--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -8,6 +8,10 @@
     flex-shrink: 0;
   }
 
+  .prizm-input-form-status-button {
+    align-self: center;
+  }
+
   .prizm-input-button-default {
     display: none;
   }
