fix(components/tabs): issue with close tabs logic #1360

--- a/libs/components/src/lib/components/tabs/tabs.component.html
+++ b/libs/components/src/lib/components/tabs/tabs.component.html
@@ -105,7 +105,7 @@
                   [class.hidden]="!tab.closable"
                   [iconClass]="'cancel-close'"
                   [size]="16"
-                  (click)="closeTab($any(tabElement.idx))"
+                  (click)="closeTab(tabElement.idx!)"
                 ></prizm-icon>
               </ng-container>
             </prizm-listing-item>
