--- a/apps/doc/src/app/components/input/input-mask/input-mask-example.component.html
+++ b/apps/doc/src/app/components/input/input-mask/input-mask-example.component.html
@@ -27,6 +27,7 @@
           [prizmHintCanShow]="prizmHintCanShow"
           [required]="required"
           [value]="value"
+          [placeholder]="placeholder"
           prizmDocHostElementKey="PrizmInputText"
           prizmInput
         />
@@ -72,6 +73,15 @@
         documentationPropertyMode="input"
       >
         Required
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="placeholder"
+        documentationPropertyName="placeholder"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Placeholder
       </ng-template>
 
       <ng-template
