--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.less
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.less
@@ -102,7 +102,6 @@ prizm-checkbox {
 
 prizm-chips,
 :host {
-  height: 20px;
   margin: 1px 0;
 
   &.inner {
@@ -113,8 +112,8 @@ prizm-chips,
     }
   }
 
-  &[data-size='m'] {
-    margin: 2px 0;
+  prizm-chips {
+    height: 18px;
   }
 
   &[data-size='l'] {
