fix: multiselect chips style fix

--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.less
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.less
@@ -102,7 +102,7 @@ prizm-checkbox {
 
 prizm-chips,
 :host {
-  margin: 1px 0;
+  margin: 2px 0;
 
   &.inner {
     margin-top: 0;
@@ -112,12 +112,12 @@ prizm-chips,
     }
   }
 
-  prizm-chips {
-    height: 18px;
-  }
-
   &[data-size='l'] {
     margin: 4px 0;
+  }
+
+  prizm-chips-item {
+    height: 18px;
   }
 }
 
