--- a/libs/icons/base/src/styles/icons-base/prizm-base-icons.scss
+++ b/libs/icons/base/src/styles/icons-base/prizm-base-icons.scss
@@ -1,7 +1,7 @@
 $prizm-base-icons-font: 'prizm-base-icons';
 
-i[class^='prizm-base-icons-']:before,
-i[class*=' prizm-base-icons-']:before {
+[class^='prizm-base-icons-']:before,
+[class*=' prizm-base-icons-']:before {
   font-family: prizm-base-icons !important;
   font-style: normal;
   font-weight: normal !important;
