--- a/libs/icons/base/src/styles/icons-full/prizm-full-icons.css
+++ b/libs/icons/base/src/styles/icons-full/prizm-full-icons.css
@@ -1,5 +1,5 @@
-i[class^='prizm-full-icons-']:before,
-i[class*=' prizm-full-icons-']:before {
+[class^='prizm-full-icons-']:before,
+[class*=' prizm-full-icons-']:before {
   font-family: prizm-full-icons !important;
   font-style: normal;
   font-weight: normal !important;
