fix: textarea size l status button styles

--- a/libs/components/src/lib/components/input/common/input-layout/input-layout-textarea.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout-textarea.component.less
@@ -102,6 +102,10 @@
         .prizm-input-button-default {
           padding-top: 5px;
         }
+
+        .prizm-input-form-status-button {
+          padding-top: 8px;
+        }
       }
     }
 
